--- a/template/economy.html
+++ b/template/economy.html
@@ -126,28 +126,47 @@
             <div class="news-main col-md-8">
                 <div class="news-other-post">
                     <div class="other-post">
-                        <div class="row">
-                            <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
-                            </div>
-                            <div class="col-7">
-                                <p class="other-post-category">Sống</p>
-                                <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
-                                    giá
-                                    hơn rất nhiều</p>
-                                <div class="other-post-information">
-                                    <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
-                                    <div class="info-seperator"></div>
-                                    <span class="other-post-comment-info">3 bình luận</span>
+                    <div class="row">
+                        <div class="col-5">
+                            <img src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
+                        </div>
+                        <div class="col-7">
+                            <p class="other-post-category">Sống</p>
+                            <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
+                                giá
+                                hơn rất nhiều</p>
+                            <div class="other-post-information">
+                                <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
+                                <div class="info-seperator"></div>
+                                <span class="other-post-comment-info">3 bình luận</span>
+                                <div class="info-seperator"></div>
+                                <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                    <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                    <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                    <span class="quantity">(23)</span>
                                 </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                                    ròng
-                                    khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                                    tập
-                                    trung vào các ...</p>
                             </div>
+                            <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                ròng
+                                khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
+                                tập
+                                trung vào các ...</p>
                         </div>
                     </div>
+                </div>
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
@@ -164,7 +183,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
-
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -215,6 +252,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -238,6 +294,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -263,7 +338,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
-
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -314,6 +407,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
