--- a/template/life.html
+++ b/template/life.html
@@ -180,6 +180,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -205,7 +224,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
-
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -256,6 +293,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -279,6 +335,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -304,7 +379,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
-
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
@@ -355,6 +448,25 @@
                                     <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">3 bình luận</span>
+                                    <div class="info-seperator"></div>
+                                    <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                                        <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                                        <span class="quantity">(23)</span>
+                                    </div>
                                 </div>
                                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
