--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -286,13 +286,12 @@
                 <div class="col-md-6 button-holder">
                     <span class="material-icons smaterial-icons-outlined">playlist_play</span>
                     <span class="play-speed">1X</span>
-                    <div class="volume-holder">
-                        <span class="material-icons material-icons-outlined">volume_up</span>
-                        <div class="progress" id="volumeProgressWrapper">
-                            <div id="volProgress" class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25"
-                                 aria-valuemin="0" aria-valuemax="100"></div>
+                    <button class="btn volume-holder">
+                        <span class="material-icons material-icons-outlined" id="volumeHolder">volume_up</span>
+                        <div class="volume-bar" id="volumeProgressWrapper" style="display: none">
+                            <input type="range" min="0" max="100" value="80" class="slider" id="volProgress">
                         </div>
-                    </div>
+                    </button>
                     <button class="btn" id="prevBtn">
                         <span class="material-icons material-icons-outlined">skip_previous</span>
                     </button>
