--- a/template/restricted-post.html
+++ b/template/restricted-post.html
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/thecup/">
-            <img class="logo" height="40" src="/thecup/resources/img/Logo.svg" alt="">
+            <img class="logo" height="40" src="../resources/img/Logo.svg" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
                         Sống
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
+                        <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -66,7 +66,7 @@
                         Công nghệ
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
+                        <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang Sống</a></li>
                         <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
                         <li>
                             <hr class="dropdown-divider">
@@ -291,18 +291,20 @@
 </div>
 <!--Economy-end-->
 <!--Restrict-->
-<div class="restrict-layer"></div>
-<div class="restrict-layer-text fixed-bottom">
-    <div class="wrapper">
-        <p class="text1">Bài viết bị giới hạn</p>
-        <p class="text2">Vui lòng Đăng nhập hoặc Đăng ký để tiếp tục</p>
-        <div class="button-holder">
-            <button class="btn btn-primary button-reg">Đăng ký</button>
-            <span>Hoặc</span>
-            <button class="btn btn-primary button-log">Đăng nhập</button>
+<div class="restrict-layer">
+    <div class="restrict-layer-text fixed-bottom transition">
+        <div class="wrapper">
+            <p class="text1">Bài viết bị giới hạn</p>
+            <p class="text2">Vui lòng Đăng nhập hoặc Đăng ký để tiếp tục</p>
+            <div class="button-holder">
+                <button class="btn btn-primary button-reg">Đăng ký</button>
+                <span>Hoặc</span>
+                <button class="btn btn-primary button-log">Đăng nhập</button>
+            </div>
         </div>
     </div>
 </div>
+
 <!--Footer-start-->
 <footer class="footer-holder">
     <div class="footer-upper">
