--- a/template/search.html
+++ b/template/search.html
@@ -144,6 +144,25 @@
                   <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                   <div class="info-seperator"></div>
                   <span class="other-post-comment-info">3 bình luận</span>
+                  <div class="info-seperator"></div>
+                  <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                    <span class="quantity">(23)</span>
+                  </div>
                 </div>
                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                   ròng
@@ -169,7 +188,25 @@
                   <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                   <div class="info-seperator"></div>
                   <span class="other-post-comment-info">3 bình luận</span>
-
+                  <div class="info-seperator"></div>
+                  <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                    <span class="quantity">(23)</span>
+                  </div>
                 </div>
                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                   ròng
@@ -220,6 +257,25 @@
                   <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                   <div class="info-seperator"></div>
                   <span class="other-post-comment-info">3 bình luận</span>
+                  <div class="info-seperator"></div>
+                  <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                    <span class="quantity">(23)</span>
+                  </div>
                 </div>
                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                   ròng
@@ -243,6 +299,25 @@
                   <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                   <div class="info-seperator"></div>
                   <span class="other-post-comment-info">3 bình luận</span>
+                  <div class="info-seperator"></div>
+                  <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                    <span class="quantity">(23)</span>
+                  </div>
                 </div>
                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                   ròng
@@ -268,7 +343,25 @@
                   <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                   <div class="info-seperator"></div>
                   <span class="other-post-comment-info">3 bình luận</span>
-
+                  <div class="info-seperator"></div>
+                  <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                    <span class="quantity">(23)</span>
+                  </div>
                 </div>
                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                   ròng
@@ -319,82 +412,25 @@
                   <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                   <div class="info-seperator"></div>
                   <span class="other-post-comment-info">3 bình luận</span>
-                </div>
-                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                  ròng
-                  khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                  tập
-                  trung vào các ...</p>
-              </div>
-            </div>
-          </div>
-          <div class="other-post">
-            <div class="row">
-              <div class="col-5">
-                <img src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
-              </div>
-              <div class="col-7">
-                <p class="other-post-category">Sống</p>
-                <p class="other-post-title">Phân tích tác phẩm tiếng thét? Sự thật đằng sau nó còn đáng
-                  giá
-                  hơn rất nhiều</p>
-                <div class="other-post-information">
-                  <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
                   <div class="info-seperator"></div>
-                  <span class="other-post-comment-info">3 bình luận</span>
-                </div>
-                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                  ròng
-                  khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                  tập
-                  trung vào các ...</p>
-              </div>
-            </div>
-          </div>
-          <div class="other-post">
-            <div class="row">
-              <div class="col-5">
-                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-2.png" alt="">
-                <div class="listenable-box">
-                  <img width="32" height="32" class="listenable-icon"
-                       src="/thecup/resources/img/icon/ic_playlist.svg" alt="">
-                </div>
-              </div>
-              <div class="col-7">
-                <p class="other-post-category">Sống</p>
-                <p class="other-post-title">Làm sao để có thể là một nhà lãnh đạo tốt</p>
-                <div class="other-post-information">
-                  <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
-                  <div class="info-seperator"></div>
-                  <span class="other-post-comment-info">3 bình luận</span>
-
-                </div>
-                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
-                  ròng
-                  khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
-                  tập
-                  trung vào các ...</p>
-              </div>
-            </div>
-          </div>
-          <div class="other-post">
-            <div class="row">
-              <div class="col-5">
-                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-3.png" alt="">
-                <div class="listenable-box">
-                  <img width="14" height="18" class="listenable-icon play-icon"
-                       src="/thecup/resources/img/icon/ic_play.svg" alt="">
-                </div>
-              </div>
-              <div class="col-7">
-                <p class="other-post-category">Sống</p>
-                <p class="other-post-title">Kinh tế học đại cương tóm tắt và ngắn gọn</p>
-                <div class="other-post-information">
-                  <span class="other-post-date-info">Ngày 21 tháng 5, 2020</span>
-                  <div class="info-seperator"></div>
-                  <span class="other-post-comment-info">3 bình luận</span>
-                  <div class="info-seperator"></div>
-                  <span class="other-post-comment-info">0 audio</span>
+                  <div class="rating-holder">
+                                        <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_half
+                                        </span>
+                    <span class="material-icons material-icons-outlined">
+                                        star_outline
+                                        </span>
+                    <span class="quantity">(23)</span>
+                  </div>
                 </div>
                 <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                   ròng
