--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2894,8 +2894,7 @@ p {
     .post-body .restrict-layer .transition {
       transform: translateY(200px); }
   .post-body .show {
-    visibility: visible;
-    background: rgba(0, 0, 0, 0.8); }
+    visibility: visible; }
 
 .purchase-body .purchase-holder {
   margin-top: 73px; }
