--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -284,8 +284,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 button-holder">
-                    <span class="material-icons smaterial-icons-outlined">playlist_play</span>
-                    <span class="play-speed">1X</span>
+                    <button class="btn">
+                        <span class="material-icons smaterial-icons-outlined">playlist_play</span>
+                    </button>
+                    <button class="btn btn-speed" id="speedBtn1X">
+                        <span class="play-speed">1X</span>
+                    </button>
                     <button class="btn volume-holder">
                         <span class="material-icons material-icons-outlined" id="volumeHolder">volume_up</span>
                         <div class="volume-bar" id="volumeProgressWrapper" style="display: none">
