--- a/template/author.html
+++ b/template/author.html
@@ -116,6 +116,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="rounded-avatar">
+                            <img src="/thecup/resources/img/author2.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -169,7 +170,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
@@ -282,7 +283,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-4.png" alt="">
+                                <img class="post-img"  src="/thecup/resources/img/other%20post/another-post-4.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
@@ -324,7 +325,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-5.png" alt="">
+                                <img class="post-img"  src="/thecup/resources/img/other%20post/another-post-5.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
@@ -437,7 +438,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-8.png" alt="">
+                                <img class="post-img"  src="/thecup/resources/img/other%20post/another-post-8.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
