--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -435,7 +435,8 @@
         position: relative;
         margin-bottom: 45px; }
         .news-holder .news-main .news-other-post .other-post img {
-          width: 100%; }
+          width: 100%;
+          height: 100px !important; }
         .news-holder .news-main .news-other-post .other-post .col-5 {
           padding-right: 0px; }
           .news-holder .news-main .news-other-post .other-post .col-5 .listenable-box {
