--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -530,6 +530,7 @@ $navbar-color : #1B3864;
           margin-bottom: 45px;
           img{
             width: 100%;
+            height: 100px!important;
           }
           .col-5{
             padding-right: 0px;
