--- a/template/life.html
+++ b/template/life.html
@@ -169,7 +169,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
+                                <img class="post-img" src="/thecup/resources/img/other%20post/another-post-1.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
@@ -282,7 +282,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-4.png" alt="">
+                                <img class="post-img"  src="/thecup/resources/img/other%20post/another-post-4.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
@@ -324,7 +324,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-5.png" alt="">
+                                <img class="post-img"  src="/thecup/resources/img/other%20post/another-post-5.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
@@ -437,7 +437,7 @@
                     <div class="other-post">
                         <div class="row">
                             <div class="col-5">
-                                <img src="/thecup/resources/img/other%20post/another-post-8.png" alt="">
+                                <img class="post-img"  src="/thecup/resources/img/other%20post/another-post-8.png" alt="">
                             </div>
                             <div class="col-7">
                                 <p class="other-post-category">Sống</p>
