--- a/template/my_account.html
+++ b/template/my_account.html
@@ -138,7 +138,7 @@
             </div>
             <p class="input-name">Ngày sinh</p>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Chủ đề" aria-label="Recipient's username with two button addons"/>
+              <input type="date" name="dateofbirth" class="date-picker">
             </div>
           </div>
         </div>
