--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -102,7 +102,9 @@
 <div class="podcast-holder">
     <div class="container podcast-player-inner">
         <div class="row">
-            <div class="col-md-4 podcast-image"></div>
+            <div class="col-md-4">
+                <img class="podcast-image" src="/thecup/resources/img/podcast/podcast-img.png" alt="">
+            </div>
             <div class="col-md-8 podcast-play">
                 <p class="category">Sống / Phong cách sống</p>
                 <p class="title">Hài lòng với những thứ đã có sẽ làm bạn hạnh phúc hơn</p>
